Portfolio header updates.

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link href="./resources/css/header-footer.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Martel:400,700|Nunito+Sans:300,400,600,700,800|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto:300" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -15,108 +15,130 @@
 
 
 
-    <!--  Banner  -->
+    <div class="parallax">
 
-    <div class="banner">
-        <div class="banner-link-container banner-left">
-            <a href="./index.html" class="banner-link">Blog</a>
-        </div>        
-        <div class="banner-link-container banner-right current-banner-page">
-            <a href="./portfolio.html" class="banner-link current-banner-page">Portfolio</a>
-        </div>        
-    </div>
+       <!--  Banner  -->
+
+        <div class="banner">
+            <div class="banner-link-container banner-left">
+                <a href="index.html" class="banner-link">Blog</a>
+            </div>        
+            <div class="banner-link-container banner-right current-banner-page">
+                <a href="portfolio.html" class="banner-link current-banner-page">Portfolio</a>
+            </div>        
+        </div>
 
 
-     <!-- Header -->
-    
-    <header class="header header-home">
-        <div class="header-links">
-            <a href="index.html">
-                <div class="name-top">
-                    <h1 class="main-title title-font">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font">Travel | Photo | Web</h2>
-                    </div>
-                </a>
-            <nav class="link-position">
-                <a href="index.html" class="nav-link title-font">Home</a>
-                <a href="about-me.html" class="nav-link title-font">About Me</a>
-                <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
-                <a href="portfolio.html" class="current-page nav-link title-font">Portfolio</a>
-                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
-            </nav>
+        <!-- Header -->
+
+        <div class="header-background header-background-portfolio">
+            <div class="header-overlay">
+                <header class="header header-home">
+                    <div class="header-links header-links-home">
+                            <a href="index.html">
+                                <div class="name-top">
+                                    <h1 class="main-title title-font grey">James Waterman</h1> 
+                                    <h2 class="main-sub-heading title-font grey">Travel | Photo | Web</h2>
+                                </div>
+                            </a>
+                            <nav class="link-position">
+                                <a href="index.html" class="nav-link title-font">Home</a>
+                                <a href="about-me.html" class="nav-link title-font">About Me</a>
+                                <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
+                                <a href="portfolio.html" class=" nav-link title-font current-page-port">Portfolio</a>
+                                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
+                            </nav>
                         
 
                         <!-- Dropdown menu -->
 
-            <div class="dropdown">
-                <div class="hamburger">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </div>
-                <div class="dropdown-content">
-                    <nav>
-                        <a href="index.html">Home</a>
-                        <a href="about-me.html">About Me</a>
-                        <a href="contact-me.html">Contact Me</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
-                    </nav>
-                </div>
+                        <div class="dropdown">
+                            <div class="hamburger">
+                                <span class="top grey-background"></span>
+                                <span class="middle grey-background"></span>
+                                <span class="bottom grey-background"></span>
+                            </div>
+                            <div class="dropdown-content">
+                                <nav>
+                                    <a href="index.html">Home</a>
+                                    <a href="about-me.html">About Me</a>
+                                    <a href="contact-me.html">Contact Me</a>
+                                    <a href="portfolio.html">Portfolio</a>
+                                    <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
+                                </nav>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="header-quote-container header-quote-container-portfolio">
+                        <div class="portfolio-block-container">
+                            <div class="skill-container">
+                                <h3 class="skill-title">Photography</h3>
+                                <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                            </div>
+                            <div class="skill-container">
+                                <h3 class="skill-title">Web Development</h3>
+                                <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </header>
             </div>
-
         </div>
-
-    </header>
+    </div>
 
     <!-- Body of Portfolio -->
 
-    <div class="body center">
-        <h3 class="page-title">Portfolio</h3>
-        <div class="portfolio-album-body">
+    <div class="body-main center">
+        <div class=" center portfolio-body-content-container">
+            <h3 class="page-title">Portfolio</h3>
+            <div class="portfolio-album-body">
 
-            <a href="./portfolio/portrait.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Portraits</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/portrait.jpg" alt="Portrait of a young woman" loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/portrait.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Portraits</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/portrait.jpg" alt="Portrait of a young woman" loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
-            <a href="./portfolio/hospitality.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Hospitality</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/hospitality.jpg" alt="Espresso martini" loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/hospitality.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Hospitality</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/hospitality.jpg" alt="Espresso martini" loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
-            <a href="./portfolio/cars.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Cars</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/car.jpg" alt="Blue Mini" loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/cars.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Cars</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/car.jpg" alt="Blue Mini" loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
-            <a href="./portfolio/pets.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Pets and wildlife</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/pets.jpg" alt="Cat sat on a flower bread" loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/pets.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Pets and wildlife</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/pets.jpg" alt="Cat sat on a flower bread" loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
-            <a href="./portfolio/sport.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Sport</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/sport1.jpg" alt="Snowboarder boardsliding as rail." loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/sport.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Sport</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/sport1.jpg" alt="Snowboarder boardsliding as rail." loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
-            <a href="./portfolio/landscape.html" class="album-tile">
-                <div class="overlay">
-                    <h4 class="album-link-title">Landscape</h4>
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/landscape.jpg" alt="Landscape with a river and trees." loading="lazy" class="album-link-img">
-                </div>
-            </a>
+                <a href="./portfolio/landscape.html" class="album-tile">
+                    <div class="overlay">
+                        <h4 class="album-link-title">Landscape</h4>
+                        <img src="./portfolio/portfolio-resources/portfolio-album-cover/landscape.jpg" alt="Landscape with a river and trees." loading="lazy" class="album-link-img">
+                    </div>
+                </a>
 
+            </div>
         </div>
     </div>
 
