--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -69,7 +69,7 @@
 
     <!-- body of page -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title">Hospitality</h3>
             <a href="../portfolio.html">⬅ Back</a>
@@ -78,7 +78,7 @@
 
     <!-- Photos -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/hospitality/hospitality3.jpg" alt="Picture of drinks on a bar." loading="lazy">
