--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -70,7 +70,7 @@
     
     <!-- body of page -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title">Landscape</h3>
             <a href="../portfolio.html">⬅ Back</a>
@@ -79,7 +79,7 @@
 
     <!-- Photos -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
@@ -87,9 +87,8 @@
                 <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
-                
+                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
             </div> 
