--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -69,7 +69,7 @@
 
     <!-- body of page -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title">Pets and Wildlife</h3>
             <a href="../portfolio.html">⬅ Back</a>
@@ -78,7 +78,7 @@
 
     <!-- Photos -->
 
-    <div class="body center">
+    <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/pets/pets1.jpg" alt="Picture of some owls." loading="lazy">        
