add web portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,11 +75,11 @@
                         <div class="portfolio-block-container">
                             <div class="skill-container">
                                 <h3 class="skill-title">Photography</h3>
-                                <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p class="skill-text">My interests in photography stemmed from my love of extreme sports. I grew to love all aspects of photography, with a passion for shooting sport and portrait/lifestyle.</p>
                             </div>
                             <div class="skill-container">
                                 <h3 class="skill-title">Web Development</h3>
-                                <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p class="skill-text">Having started my coding journey in 2018, I now focus primarily on front-end technologies; with a continual goal of becoming a full-stack developer. </p>
                             </div>
                         </div>
                     </div>
@@ -93,54 +93,115 @@
 
     <div class="body-main center">
         <div class=" center portfolio-body-content-container">
-            <h3 class="page-title">Portfolio</h3>
-            <div class="portfolio-album-body">
+            <div class="portfolio-headings center">
+                <button class="current page-title title-font photo-title">Photography</button> 
+                <button class="page-title title-font web-title">Web Development</button>
+            </div>
+            <div class="portfolio-photo-body slide-container">
 
                 <a href="./portfolio/portrait.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Portraits</h4>
+                        <h4 class="album-link-title title-font">Portraits</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/portrait.jpg" alt="Portrait of a young woman" loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
                 <a href="./portfolio/hospitality.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Hospitality</h4>
+                        <h4 class="album-link-title title-font">Hospitality</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/hospitality.jpg" alt="Espresso martini" loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
                 <a href="./portfolio/cars.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Cars</h4>
+                        <h4 class="album-link-title title-font">Cars</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/car.jpg" alt="Blue Mini" loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
                 <a href="./portfolio/pets.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Pets and wildlife</h4>
+                        <h4 class="album-link-title title-font">Pets and wildlife</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/pets.jpg" alt="Cat sat on a flower bread" loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
                 <a href="./portfolio/sport.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Sport</h4>
+                        <h4 class="album-link-title title-font">Sport</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/sport1.jpg" alt="Snowboarder boardsliding as rail." loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
                 <a href="./portfolio/landscape.html" class="album-tile">
                     <div class="overlay">
-                        <h4 class="album-link-title">Landscape</h4>
+                        <h4 class="album-link-title title-font">Landscape</h4>
                         <img src="./portfolio/portfolio-resources/portfolio-album-cover/landscape.jpg" alt="Landscape with a river and trees." loading="lazy" class="album-link-img">
                     </div>
                 </a>
 
             </div>
+
+            <div class="portfolio-web-body slide-container">
+                <div class="logo-container center">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/html-5.png" class="logo logo-small" alt="html logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/css.png" class="logo logo-small" alt="css logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/javascript.png" class="logo logo-small" alt="javascript logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/sass.png" class="logo" alt="sass logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/react.png" class="logo" alt="react logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/node.png" class="logo" alt="node.js logo">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/express.png" class="logo" alt="express logo">  
+                    <img src="./portfolio/portfolio-resources/portfolio-images/sql.png" class="logo logo-small" alt="sql logo">
+                </div>
+
+
+                <p class="web-text web-dev-width center">In 2018 I had just finished college and found myself rather lost with what to do next. Whilst away travelling I decided I wanted a website where I could share my photography. With a website being the goal I decided I would learn to make one myself as time is something I had plenty of.<br><br>
+
+                After learning the basics from various websites, I decided to use platforms such as Codecademy to further my knowledge and provide myself with a solid foundation to further progress on my own. The more I worked on projects, the more my eyes were opened to what could be achieved through coding; sparking my enthusiasm to continue improving my work.<br><br>
+
+                Since then I have worked with various languages and frameworks, such as HTML5, CSS3, JavaScript, Sass, React.js, Express.js, Node.js and SQL.</p>
+
+                <h3 class="page-title title-font web-body-title web-dev-width center">Projects</h3>
+
+                <div class="web-dev-width center">
+
+                    <div class="project-container">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Ingredients Calculator</h4>
+                            <p class="web-text"><a href="http://ingredientscalculator.surge.sh/" target="_blank">Ingredients Calculator</a> is a web app I created that allows you to take the ingredients from a recipe and then increase/decrease them based on how many people you're cooking for. I produced the app using JavaScript and CSS with the React framework to produce a fast and lightweight app that doesn't require the use of a server or database. <a href="https://github.com/jameswaterman/ingredients-calculator" target="_blank">GitHub</a></p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/ingredients-calculator.png" alt="Ingredients Calculator" class="project-img">
+                    </div>
+
+                    <div class="project-container bg-color">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Business Website Template</h4>
+                            <p class="web-text">I built this fully responsive <a href="http://businesswebsitetemplate.surge.sh/" target="_blank">buisness website template</a> using primarily HTML and CSS, as well as JavaScript for the animation of the navigation. Throttling has been used to control how often functions attached to a scroll event are being executed to help improve performance. <a href="https://github.com/jameswaterman/business-website-template" target="_blank">GitHub</a></p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/business-template.png" alt="Business website template" class="project-img">
+                    </div>
+
+                    <div class="project-container bg-color">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Jamming</h4>
+                            <p class="web-text"><a href="http://jammingplaylistcreator.surge.sh/" target="_blank">Jamming</a> is a web app I built that interacts with the Spotify API, allowing you to create and save new playlists to your Spotify account. I built this web app with the react framework, along with CSS. <a href="https://github.com/jameswaterman/Jamming" target="_blank">GitHub</a></p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/jamming.png" alt="Business website template" class="project-img">
+                    </div>
+                    
+                </div>
+
+                <h3 class="page-title web-dev-width title-font web-body-title center">GitHub</h3>
+
+                <p class="text-github web-text web-dev-width center">Check out my GitHub for more projects:</p>
+                <a href="https://github.com/jameswaterman" target="_blank">
+                    <img src="./portfolio/portfolio-resources/portfolio-images/github.png" class="github-logo center">
+                </a>
+
+            </div>
         </div>
-    </div>
+    
 
         <footer class="footer">
         <div class="footerlinks">
@@ -153,6 +214,7 @@
 
         <p class="center copyright">&copy; James Waterman, 2020</p> 
     </footer>
+    </div>
 
     </div>
 
