--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -72,7 +72,7 @@
 
     <div class="body-album center">
         <div class="album-page-heading">
-            <h3 class="page-title">Landscape</h3>
+            <h3 class="page-title title-font">Landscape</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
