--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -71,7 +71,7 @@
 
     <div class="body-album center">
         <div class="album-page-heading">
-            <h3 class="page-title">Pets and Wildlife</h3>
+            <h3 class="page-title title-font">Pets and Wildlife</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
