--- a/portfolio/cars.html
+++ b/portfolio/cars.html
@@ -71,14 +71,14 @@
 
     <div class="body-album center">
         <div class="album-page-heading">
-            <h3 class="page-title">Cars</h3>
+            <h3 class="page-title title-font">Cars</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
 
     <!-- Photos -->
 
-    <div class="body-album center">
+    <section class="body-album center">
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy">        
@@ -103,7 +103,7 @@
                 <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy">
             </div>    
         </div>
-    </div>
+    </section>
 
     <a href="#top" class="back_to_top center">Back to top</a>
 
