--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -71,7 +71,7 @@
 
     <div class="body-album center">
         <div class="album-page-heading">
-            <h3 class="page-title">Sport</h3>
+            <h3 class="page-title title-font">Sport</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
