--- a/portfolio.html
+++ b/portfolio.html
@@ -189,6 +189,22 @@
                         </div>
                         <img src="./portfolio/portfolio-resources/portfolio-images/jamming.png" alt="Business website template" class="project-img">
                     </div>
+
+                    <div class="project-container bg-color">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Ravenous</h4>
+                            <p class="web-text"><a href="http://ravenousreviews.surge.sh/" target="_blank">Ravenous</a> is a web app I built which interacts with the Yelp API to provide you with quick reviews of restaurants in a given area. Ravenous allows you to sort your search results based on best match, highest rating or most reviews. I built this app using React alongside CSS. <a href="https://github.com/jameswaterman/ravenous" target="_blank">GitHub</a></p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/ravenous.png" alt="Business website template" class="project-img">
+                    </div>
+
+                    <div class="project-container bg-color">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Colmar Academy</h4>
+                            <p class="web-text"><a href="http://colmaracademytest.surge.sh/" target="_blank">Colmar Academy</a> is a fully responsive website template for "Colmar Academy". It has been built completely with HTML and CSS. <a href="https://github.com/jameswaterman/capstone-project" target="_blank">GitHub</a></p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/colmar.png" alt="Business website template" class="project-img">
+                    </div>
                     
                 </div>
 
