mobile portfolio update

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
     <div id="body" class="body-main center">
         <div class=" center portfolio-body-content-container">
             <div class="portfolio-headings center">
-                <button class="current page-title title-font web-title">Web Development</button>
+                <button class="current page-title title-font web-title">Web <span>Development</span></button>
                 <button class="page-title title-font photo-title">Photography</button> 
             </div>
             <div class="portfolio-photo-body slide-container">
