Updated header mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,15 @@
             <div class="header-overlay">
                 <header class="header header-home">
                     <div class="header-links header-links-home">
-                            <a href="index.html">
-                                <div class="name-top">
-                                    <h1 class="main-title title-font grey">James Waterman</h1> 
-                                    <h2 class="main-sub-heading title-font grey">Travel | Photo | Web</h2>
-                                </div>
-                            </a>
+                        
+                        <div class="name-top">
+                            <h1 class="main-title title-font"><a href="index.html" class="grey">James Waterman</a></h1>
+
+                            <h2 class="main-sub-heading title-font web-sub-heading"><a href="index.html" class="grey">Travel | Photo | Web</a></h2>
+
+                            <h2 class="main-sub-heading title-font mobile-sub-heading grey"><a href="index.html" class="grey">Blog</a> | <a href="portfolio.html" class="grey">Portfolio</a></h2>
+                        </div>
+
                             <nav class="link-position">
                                 <a href="index.html" class="nav-link title-font">Home</a>
                                 <a href="about-me.html" class="nav-link title-font">About Me</a>
