portrait portfolio update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                             <h2 class="main-sub-heading title-font web-sub-heading"><a href="index.html">Travel | Photo | Web</a></h2>
 
-                            <h2 class="main-sub-heading title-font mobile-sub-heading"><a href="index.html">Blog</a> | <a href="portfolio.html">Portfolio</a></h2>
+                            <h2 class="main-sub-heading title-font mobile-sub-heading"><a href="#blog">Blog</a> | <a href="portfolio.html">Portfolio</a></h2>
                         </div>
                            
                         <nav class="link-position">
