--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -92,8 +92,8 @@
             <div class="row">
                 <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets18.jpg" alt="Picture of a deer" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy">
             </div>
             <div class="row">
@@ -107,6 +107,7 @@
                 <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy"> 
                 <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
             </div>       
         </div>
     </div>
